--- a/frontend/config.toml
+++ b/frontend/config.toml
@@ -20,7 +20,7 @@ theme = 'PaperMod'
 
     [[params.profileMode.buttons]]
         name = "LinkedIn"
-        url = "https://linkedin.com/in/danicolet"
+        url = "https://www.linkedin.com/in/daniel-colet"
 
 [menu]
   [[menu.main]]
